pairprompting chatPair bug fix. global Scrollbar styling

--- a/pairllm/src/lhs.css
+++ b/pairllm/src/lhs.css
@@ -272,3 +272,23 @@ body{
     /* width: 40px; */
     height: 40px;
 }
+/* For Chrome, Safari, and Edge */
+::-webkit-scrollbar {
+    width: 4px;
+    border-radius: 6px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #000;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #1f1d1d;
+  }
+  
+  /* For Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #000;
+  }
+  
